# metropulse-lakehouse

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tokens.css
.github/workflows/: ci.yml
.hallmark/: log.json  preflight.json
apps/dashboard/: index.html  package.json
apps/dashboard/scripts/: build-config.mjs  build.mjs  serve.mjs  server-path.mjs
apps/dashboard/src/: app.js  console-app.js  console.css  dashboard-core.js  styles.css
apps/dashboard/tests/: build-config.test.mjs  dashboard-core.test.mjs  server-path.test.mjs
docs/: architecture.md  data-contracts.md  interview-guide.md  portfolio-case-study.md
scripts/: verify.sh
src/metropulse/: __init__.py  api.py  cli.py  config.py  generator.py  ingestion.py  observability.py  orchestration.py  quality.py  transforms.py  warehouse.py
tests/: helpers.py  test_api.py  test_cli.py  test_observability.py  test_pipeline.py  test_quality.py  test_release_contract.py
