[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metropulse-lakehouse"
version = "0.1.0"
description = "End-to-end urban mobility data engineering portfolio project with ingestion, DuckDB warehouse, quality gates, API, and dashboard."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Portfolio Project" }]
dependencies = [
  "duckdb>=1.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0"
]

[project.scripts]
metropulse = "metropulse.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
